# LeNLP

./: .gitignore  Cargo.toml  Manifest.in  README.Md  README.md  benchmark.ipynb  pyproject.toml  pyprojet.toml  setup.py  test.ipynb
.github/workflows/: CI.yml  publish.yml  wheels.yml
antelope/normalizer/: __init__.py  normalize.py
lenlp/: __init__.py
lenlp/analyzer/: __init__.py  analyze.py
lenlp/counter/: __init__.py  count.py
lenlp/flash/: __init__.py  flash_text.py
lenlp/normalizer/: normalize.py
lenlp/sparse/: __init__.py  bm25_vectorizer.py  count_vectorizer.py  tfidf_vectorizer.py
python/lenlp/: __init__.py
python/lenlp/analyzer/: analyze.py
python/lenlp/counter/: count.py
python/lenlp/flash/: flash_text.py
python/lenlp/normalizer/: __init__.py  normalize.py
python/lenlp/sparse/: __init__.py  bm25_vectorizer.py  count_vectorizer.py  tfidf_vectorizer.py
rust/: lib.rs  rsanalyzer.rs  rscounter.rs  rsflashtext.rs  rsnormalizer.rs  rssparse.rs  rsstop_words.rs  rsvectorizer.rs
src/: lib.rs  rsanalyzer.rs  rscounter.rs  rsnormalizer.rs  rsvectorizer.rs
