[package]
name = "_rslenlp"
edition = "2021"

[lib]
name = "_rslenlp"
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
unidecode = "0.3.0"
rayon = "1.10.0"
pyo3 = { version = "0.21.2", features = ["extension-module", "generate-import-lib"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = { version = "1.0.117" }
bincode = "1.3.3"
ndarray = "0.15"
numpy = "0.21"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[tool.maturin]
features = ["pyo3/extension-module"]
