[build-system]
requires = ["maturin >= 1.5.1"]
build-backend = "maturin"

[project]
name = "lenlp"
version = "1.1.0"
description = "Natural Language Processing library for Python from Rust."

authors = [
    {name = "Raphael Sourty", email = "raphael.sourty@gmail.com"},
]


keywords = []

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]

requires-python = ">=3.8"

dependencies = [
    "scikit-learn >= 1.5.0",
    "scipy >= 1.13.1",
]

[project.urls]
Homepage = "https://github.com/raphaelsty/lenlp"
Documentation = "https://github.com/raphaelsty/lenlp"
Repository = "https://github.com/raphaelsty/lenlp"

[project.optional-dependencies]
dev = [
    "maturin >= 1.5.1",
    "pytest-cov >= 5.0.0",
    "pytest >= 7.4.4",
    "ruff >= 0.1.15",
]
[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]   
python-source = "python"
module-name = "lenlp._rslenlp"

[tool.include]
include = [
    "Cargo.toml",
    "pyproject.toml",
    "README.md",
    "rust/*",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning",
    "ignore::UserWarning",
]
addopts = [
    "--doctest-modules",
    "--verbose",
    "-ra",
    "--cov-config=.coveragerc",
    "-m not web and not slow",
]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "NUMBER"]
norecursedirs = [
    "build",
    "docs",
    "node_modules",
]
markers = [
    "web: tests that require using the Internet",
    "slow: tests that take a long time to run",
]